Thu Feb 26 12:15:02 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (make_cmdvector): adjust successive double-quote
	  handling.

Thu Feb 26 02:35:10 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_f_exec): get rid of SEGV when exec failed for command
	  in single string.

Wed Feb 25 21:17:33 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (obj_free), io.c (rb_io_fptr_finalize), rubyio.h (OpenFile):
	  sharing OpenFile.

	* io.c (rb_io_initialize): accept IO instance.  [ruby-dev:22195]

Wed Feb 25 21:16:10 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* instruby.rb (with_destdir): should return the given argument if no
	  DESTDIR is given.

	* instruby.rb: use path name expansion of cmd.exe.

Wed Feb 25 20:44:45 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/cgi-lib.rb, lib/getopts.rb, lib/importenv.rb, lib/parsearg.rb:
	  warn with caller position.

	* test/rss/test_content.rb, test/rss/test_dublincore.rb,
	  test/rss/test_syndication.rb, test/rss/test_trackback.rb: use cgi
	  instead of cgi-lib.

Tue Feb 24 18:42:03  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* dir.c (glob_helper): '**/' should not match leading period
	  unless File::FNM_DOTMATCH is set. (like '*/') [ruby-dev:23014]

Tue Feb 24 18:03:14 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_file.rb (test_fnmatch): test for dir.c:1.108.

Tue Feb 24 17:07:17  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* dir.c (fnmatch): File.fnmatch with File::FNM_PATHNAME was broken
	  for the pattern including '*' followed by '/'.

Tue Feb 24 13:22:21 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/rdoc.rb (RDoc::RDoc::normalized_file_list): Attempt to get better
	  heuristics on which files to include and exclude. Now only include
	  non-standard files if they are explicitly named in ARGV.

Tue Feb 24 07:23:30 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/generators/html_generator.rb: Deal with :stopdoc: when